--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <!-- font awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- style.css -->
-  <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/minified.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
   <!-- vue.js -->
   <script src='https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js' defer></script> 
   <script type='text/javascript' src='./assets/js/main.js' defer></script>
@@ -17,9 +17,61 @@
 <body>
   
   <div id="root">
-    <div>
-      
-    </div>
+    <main class="d-flex jc-center ai-center">
+      <div class="container d-flex">
+        <!-- parte sinistra -->
+        <div class="col-4">
+          <!-- fascia con immagine personale -->
+          <div class="d-flex jc-between ai-center bg-lightgray top">
+            <div class="d-flex ai-center">
+              <img class="va-middle ml-1 mr-1" src="./assets/img/avatar_io.jpg" alt="user image">
+              <span>Sofia</span>
+            </div>
+            <div class="d-flex">
+              <i class="fa-solid fa-circle-notch mr-2 text-gray fs-6"></i>
+              <i class="fa-solid fa-message mr-2 text-gray fs-6"></i>
+              <i class="fa-solid fa-ellipsis-vertical mr-2 text-gray fs-6"></i>
+            </div>
+          </div>
+          <!-- notifiche -->
+          <div class="d-flex ai-center bg-lightblue" id="notification">
+            <i class="fa-solid fa-bell-slash p-1 my-2 ml-2 mr-1"></i>
+            <div>
+              <div class="fs-4">Ricevi notifiche di nuovi messaggi</div>
+              <a href="#" class="fs-3">Attiva notifiche desktop</a>
+            </div>
+          </div>
+          <!-- search -->
+          <div id="search" class="d-flex jc-center ai-center px-1">
+            <div class="my-1 d-flex w-100">
+              <span class="text-center"><i class="fa-solid fa-magnifying-glass text-gray py-1"></i></span>
+              <input type="text" placeholder=" Cerca o inizia una nuova chat">
+            </div>
+          </div>
+          <!-- lista chat -->
+          <div id="list-contacts">
+            <ul>
+              <li v-for="contact in contacts" class="d-flex jc-between" id="contact">
+                <div class="d-flex ai-center">
+                  <img class="mx-2 my-2" :src="'./assets/img/avatar' + contact.avatar + '.jpg'" alt="profile image">
+                  <div>
+                    <div>{{contact.name}}</div>
+                    <span class="text-lightgray fs-3">Ultimo messaggio inviato</span>
+                  </div>
+                </div>
+                <div class="mt-2">
+                  <span class="text-lightgray fs-3 mr-2">12:00</span>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- parte destra -->
+        <div class="col-8">
+          
+        </div>
+      </div>
+    </main>
   </div>
 
 </body>
