--- a/index.html
+++ b/index.html
@@ -68,7 +68,34 @@
         </div>
         <!-- parte destra -->
         <div class="col-8">
-          
+          <div class="d-flex jc-between ai-center bg-lightgray top">
+            <div class="d-flex ai-center">
+              <img id="current-chat-img" class="va-middle ml-1 mr-1" :src="'./assets/img/avatar' + contacts[0].avatar + '.jpg'" alt="user image">
+              <div>
+                <div>{{contacts[0].name}}</div>
+                <span class="text-darkgray fs-4">Ultimo accesso oggi alle 12:00</span>
+              </div>
+            </div>
+            <div class="d-flex">
+              <i class="fa-solid fa-magnifying-glass mr-2 text-gray fs-6"></i>
+              <i class="fa-solid fa-paperclip mr-2 text-gray fs-6"></i>
+              <i class="fa-solid fa-ellipsis-vertical mr-2 text-gray fs-6"></i>
+            </div>
+          </div>
+          <div id="chat">
+            
+          </div>
+          <div id="input-text" class="d-flex ai-center jc-between">
+            <div class="text-center" id="emoji-icon">
+              <i class="fa-solid fa-face-smile text-darkgray fs-6"></i>
+            </div>
+            <div id="input-message">
+              <input type="text" placeholder="Scrivi un messaggio" class="p-2">
+            </div>
+            <div class="text-center" id="microphone-icon">
+              <i class="fa-solid fa-microphone text-darkgray fs-6"></i>
+            </div>
+          </div>
         </div>
       </div>
     </main>
