--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <!-- lista chat -->
           <div id="list-contacts">
             <ul>
-              <li v-for="contact in contacts" class="d-flex jc-between" id="contact">
+              <li v-for="(contact, i) in contacts" class="d-flex jc-between" id="contact" @click="viewChat(i)">
                 <div class="d-flex ai-center">
                   <img class="mx-2 my-2" :src="'./assets/img/avatar' + contact.avatar + '.jpg'" alt="profile image">
                   <div>
@@ -83,14 +83,25 @@
             </div>
           </div>
           <div id="chat">
-            
+            <ul class="d-flex flex-wrap">
+              <li v-for="message in contacts[0].messages" :class="(message.status == 'sent') ? 'sent' : 'received'">
+                  <div class="d-flex flex-wrap">
+                    <div class="col-12">
+                      {{message.message}}
+                    </div>
+                    <span class="fs-3 text-darkgray">
+                      {{message.date}}
+                    </span>
+                  </div>
+              </li>
+            </ul>
           </div>
           <div id="input-text" class="d-flex ai-center jc-between">
             <div class="text-center" id="emoji-icon">
               <i class="fa-solid fa-face-smile text-darkgray fs-6"></i>
             </div>
             <div id="input-message">
-              <input type="text" placeholder="Scrivi un messaggio" class="p-2">
+              <input id="send" type="text" placeholder="Scrivi un messaggio" class="p-2" @keyup.enter="sendMessage()">
             </div>
             <div class="text-center" id="microphone-icon">
               <i class="fa-solid fa-microphone text-darkgray fs-6"></i>
