--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   <img class="mx-2 my-2" :src="'./assets/img/avatar' + contact.avatar + '.jpg'" alt="profile image">
                   <div>
                     <div>{{contact.name}}</div>
-                    <span class="text-lightgray fs-3">Ultimo messaggio inviato</span>
+                    <span class="text-lightgray fs-3">Ultimo messaggio oggi alle 12:00</span>
                   </div>
                 </div>
                 <div class="mt-2">
@@ -70,9 +70,9 @@
         <div class="col-8">
           <div class="d-flex jc-between ai-center bg-lightgray top">
             <div class="d-flex ai-center">
-              <img id="current-chat-img" class="va-middle ml-1 mr-1" :src="'./assets/img/avatar' + contacts[0].avatar + '.jpg'" alt="user image">
+              <img id="current-chat-img" class="va-middle ml-1 mr-1" :src="'./assets/img/avatar' + current.avatar + '.jpg'" alt="user image">
               <div>
-                <div>{{contacts[0].name}}</div>
+                <div>{{current.name}}</div>
                 <span class="text-darkgray fs-4">Ultimo accesso oggi alle 12:00</span>
               </div>
             </div>
@@ -84,7 +84,7 @@
           </div>
           <div id="chat">
             <ul class="d-flex flex-wrap">
-              <li v-for="message in contacts[0].messages" :class="(message.status == 'sent') ? 'sent' : 'received'">
+              <li v-for="message in current.messages" :class="(message.status == 'sent') ? 'sent' : 'received'">
                   <div class="d-flex flex-wrap">
                     <div class="col-12">
                       {{message.message}}
