--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </ul>
                       </nav> -->
                     </div>
-                    <span class="fs-3 text-darkgray">
+                    <span class="fs-3 text-darkgray col-12 text-right">
                       {{message.date}}
                     </span>
                   </div>
