--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <div class="col-8">
           <div class="d-flex jc-between ai-center bg-lightgray top">
             <div class="d-flex ai-center">
-              <img id="current-chat-img" class="va-middle ml-1 mr-1" :src="'./assets/img/avatar' + current.avatar + '.jpg'" alt="user image">
+              <img id="current-chat-img" class="va-middle ml-1 mr-1" :src="'./assets/img/avatar' + currentChat.avatar + '.jpg'" alt="user image">
               <div>
-                <div>{{current.name}}</div>
+                <div>{{currentChat.name}}</div>
                 <span class="text-darkgray fs-4">Ultimo accesso oggi alle 12:00</span>
               </div>
             </div>
@@ -84,7 +84,7 @@
           </div>
           <div id="chat">
             <ul class="d-flex flex-wrap">
-              <li v-for="(message, i) in current.messages" :class="(message.status == 'sent') ? 'sent' : 'received'" class="message p-relative">
+              <li v-for="(message, i) in currentChat.messages" :class="(message.status == 'sent') ? 'sent' : 'received'" class="message p-relative">
                   <div class="d-flex flex-wrap">
                     <div class="col-11">
                         {{message.message}}
@@ -92,10 +92,10 @@
                     <div class="col-1">
                       <i @click="showMessageMenu(i)" class="fa-solid fa-chevron-down show d-none"></i>
                       <!-- ------------------------------------------------------------------------ -->
-                      <nav v-show="messageMenu" :class="(message.status == 'sent') ? 'nav-sent' : 'nav-received'">
+                      <nav v-show="messageMenu && messageMenuIndex === i" :class="(message.status == 'sent') ? 'nav-sent' : 'nav-received'">
                         <i @click="hideMessageMenu(i)" class="fa-solid fa-angle-up hide d-none"></i>
                         <ul>
-                          <li @click="deleteMessage()"><a href="#">Delete Message</a></li>
+                          <li @click="deleteMessage(i)"><a href="#">Delete Message</a></li>
                         </ul>
                       </nav>
                       <!-- ------------------------------------------------------------------------ -->
